--- a/src/scss/components/_status-creator.scss
+++ b/src/scss/components/_status-creator.scss
@@ -5,6 +5,10 @@
 
   &__header {
     @extend .base-form__header;
+    padding: 0.5rem;
+    margin: 0;
+    height: auto;
+    overflow: visible;
   }
 
   .profile-img {
