--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -5,6 +5,8 @@ $font-primary: 'Roboto',
 sans-serif;
 $font-secondary: 'Roboto',
 sans-serif;
+$underdog: 'Underdog',
+serif;
 // $font-decorative: 'Protest Revolution',
 // sans-serif;
 
